--- a/.github/workflows/update-angular.yml
+++ b/.github/workflows/update-angular.yml
@@ -19,6 +19,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Update Angular cli
+        run: npm --version
+
+      # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
 
