--- a/.github/workflows/update-angular.yml
+++ b/.github/workflows/update-angular.yml
@@ -22,14 +22,21 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.8
-          
+
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm i @angular/cli -g
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Check For Updates
+        run: |
+          ng update | tee update-result.txt
 
+          ls
+
+          cat update-result.txt
+
+          update.angular.sh
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
