--- a/.github/workflows/update-angular.yml
+++ b/.github/workflows/update-angular.yml
@@ -27,11 +27,12 @@ jobs:
         run: |
           npm install
           npm i @angular/cli -g
-          git status -s
 
       - name: Check For Updates
-        env:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
+        id: updates
+        outputs:
+          branch_name:
+            description: the branch name of the updates
         run: |
           ng update | tee update-result.txt
 
@@ -49,12 +50,24 @@ jobs:
               UPDATE_CMD="${UPDATE_CMD} $pkg"
             done
             
+            git reset --hard
             git status -s
             
             ng update $UPDATE_CMD --verbose --force
+
+            update_name=$(date +'%m-%d-%Y')
+
+            echo ::set-output name=branch_name::"angular-upgrade-$update_name"
+
+            exit 0
           fi
+
+          exit 78
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Create branch For Upgrade
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: success()
+        uses: peterjgrainger/action-create-branch@v2.0.1
+        with:
+          branch: '${{ steps.updates.outputs.branch_name }}'
