--- a/.github/workflows/update-angular.yml
+++ b/.github/workflows/update-angular.yml
@@ -4,7 +4,8 @@ name: Update Angular
 
 # Controls when the action will run.
 on:
-  workflow_dispatch:
+  schedule:
+  - cron: "0 1 1 * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
