--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -3,7 +3,7 @@
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
 name: CI
 
-on: [push, pull_request, pull_request_review]
+on: [push, pull_request]
 
 jobs:
   build:
