--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Test
       run: npm test -- --watch=false --browsers=ChromeHeadless
     - name: E2E
-      run: npm run e2e -- --configuration=ci
+      run: npm run e2e
