--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Build
       run: npm run build -- --prod
     - name: Test
-      run: npm test -- --watch=false --browsers=ChromeHeadless
+      run: npm test
     - name: E2E
-      run: npm run e2e
+      run: npm run 
