--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -29,12 +29,13 @@
     "@angular/cli": "~11.2.11",
     "@angular/compiler-cli": "~11.2.12",
     "@angular/language-service": "~11.2.12",
-    "@types/node": "^14.14.35",
+    "@ngneat/spectator": "^7.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^14.14.35",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
