--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "predeploy": "ng build --prod --output-path docs --base-href /angular-infinite-scroll-directive/",
+    "deploy": "gh-pages -d docs"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +36,7 @@
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.0.2",
     "codelyzer": "^6.0.2",
+    "gh-pages": "^3.1.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.3.2",
