--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "predeploy": "ng build --prod --output-path docs --base-href /angular-infinite-scroll-directive/",
+    "predeploy": "ng build --configuration production --output-path docs --base-href /angular-infinite-scroll-directive/",
     "deploy": "gh-pages -d docs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.2",
-    "@angular/common": "~12.0.2",
-    "@angular/compiler": "~12.0.2",
-    "@angular/core": "~12.0.2",
-    "@angular/forms": "~12.0.2",
-    "@angular/platform-browser": "~12.0.2",
-    "@angular/platform-browser-dynamic": "~12.0.2",
-    "@angular/router": "~12.0.2",
+    "@angular/animations": "~12.1.1",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/forms": "~12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "^6.5.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.2",
-    "@angular/cli": "~12.0.2",
-    "@angular/compiler-cli": "~12.0.2",
-    "@angular/language-service": "~12.0.2",
+    "@angular-devkit/build-angular": "~12.1.0",
+    "@angular/cli": "~12.1.0",
+    "@angular/compiler-cli": "~12.1.1",
+    "@angular/language-service": "~12.1.1",
     "@ngneat/spectator": "^7.1.0",
     "@types/jasmine": "~3.7.1",
     "@types/jasminewd2": "~2.0.9",
