--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "infinite-scroller-poc": {
@@ -112,8 +112,21 @@
               "devServerTarget": "infinite-scroller-poc:serve:production"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
-    }},
-  "defaultProject": "infinite-scroller-poc"
+    }
+  },
+  "defaultProject": "infinite-scroller-poc",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
