--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -34,5 +34,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: E2E
-      run: npm deploy
+    - name: Use Node.js 14.15
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.15
+    - name: Install dependencies
+      run: npm ci
+    - name: Deploy
+      run: npm run deploy
