--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -41,4 +41,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Deploy
-      run: npm run deploy
+      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
+      with: 
+        github_access_token: ${{ secrets.GITHUB_TOKEN }}
+        base_href: /angular-infinite-scroll-directive/
