--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -41,6 +41,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Deploy
-      run: npm run deploy
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        npm run deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
