--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Deploy
+      if: github.ref == 'refs/heads/master'
       run: |
         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         npm run deploy
