--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -40,6 +40,10 @@ jobs:
         node-version: 14.15
     - name: Install dependencies
       run: npm ci
+    - name: setup git config
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
     - name: Deploy
       if: github.ref == 'refs/heads/master'
       run: |
