--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -6,7 +6,7 @@ name: CI/CD
 on: [push, pull_request]
 
 jobs:
-  build:
+  lint:
 
     # Machine environment:
     # https://help.github.com/en/articles/software-in-virtual-environments-for-github-actions#ubuntu-1804-lts
@@ -21,16 +21,55 @@ jobs:
         node-version: 14.15
     - name: Install dependencies
       run: npm ci
-    - name: Lint
-      run: npm run lint
+  build:
+    needs: lint    
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js 14.15
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.15
+    - name: Install dependencies
+      run: npm ci
     - name: Build
       run: npm run build -- --prod
+  test:
+    needs: build
+    # Machine environment:
+    # https://help.github.com/en/articles/software-in-virtual-environments-for-github-actions#ubuntu-1804-lts
+    # We specify the Node.js version manually below, and use versioned Chrome from Puppeteer.
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js 14.15
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.15
+    - name: Install dependencies
+      run: npm ci
     - name: Test
       run: npm test
     - name: E2E
       run: npm run
-  deploy:
+  e2e:
     needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js 14.15
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.15
+    - name: Install dependencies
+      run: npm ci
+    - name: E2E
+      run: npm run
+  deploy:
+    needs: ["build","test","e2e"]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
