--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -32,7 +32,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install dependencies
-      run: npm ci
+      run: npm install
   build:
     needs: lint    
     runs-on: ubuntu-latest
@@ -56,7 +56,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Build
       run: npm run build -- --prod
   test:
@@ -85,7 +85,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Test
       run: npm test
     - name: E2E
@@ -113,7 +113,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: E2E
       run: npm run
   deploy:
@@ -138,7 +138,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: setup git config
       run: |
         git config user.name "GitHub Actions Bot"
