--- a/angular.json
+++ b/angular.json
@@ -125,8 +125,9 @@
       }
     }
   },
-  "defaultProject": "infinite-scroller-poc",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
