--- a/.github/workflows/test-angular.yml
+++ b/.github/workflows/test-angular.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build
-      run: npm run build -- --prod
+      run: npm run build -- --configuration production
   test:
     needs: build
     # Machine environment:
