--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^16.2.11",
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
-    "ngx-perfect-scrollbar": "^10.1.1",
+    "perfect-scrollbar": "^1.5.5",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.1",
     "zone.js": "~0.13.0"
@@ -31,7 +31,7 @@
     "@angular/cli": "^16.2.8",
     "@angular/compiler-cli": "^16.2.11",
     "@angular/language-service": "^16.2.11",
-    "@ngneat/spectator": "^12.1.1",
+    "@ngneat/spectator": "^15.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.11.9",
